update the docker readme